--- a/Android/scenes/aichat/src/main/res/layout/ease_widget_title_bar.xml
+++ b/Android/scenes/aichat/src/main/res/layout/ease_widget_title_bar.xml
@@ -10,10 +10,11 @@
 
     <androidx.appcompat.widget.AppCompatImageButton
         android:id="@+id/iv_back_icon"
-        android:layout_width="36dp"
-        android:layout_height="36dp"
-        android:padding="6dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginStart="12dp"
+        android:paddingEnd="5dp"
+        android:paddingVertical="5dp"
         android:background="@android:color/transparent"
         android:src="@drawable/aichat_icon_back"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -37,7 +38,6 @@
         android:id="@+id/ivOverlayImage"
         android:layout_width="36dp"
         android:layout_height="36dp"
-        android:layout_marginStart="5dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@id/iv_back_icon"
         app:layout_constraintTop_toTopOf="parent" />
