--- a/Android/scenes/aichat/src/main/res/layout/ease_widget_chat_primary_menu.xml
+++ b/Android/scenes/aichat/src/main/res/layout/ease_widget_chat_primary_menu.xml
@@ -27,6 +27,8 @@
             android:layout_height="30dp"
             android:layout_gravity="bottom"
             android:layout_marginBottom="10dp"
+            android:background="@null"
+            android:scaleType="fitCenter"
             android:src="@drawable/aichat_icon_calling"
             android:visibility="visible" />
 
@@ -53,10 +55,10 @@
                 android:gravity="center_vertical"
                 android:hint="@string/aichat_lets_chat"
                 android:imeOptions="actionSend"
-                android:textColorHint="@color/def_text_grey_303"
                 android:inputType="text"
                 android:lineSpacingExtra="3dp"
                 android:textColor="@color/black"
+                android:textColorHint="@color/def_text_grey_303"
                 android:textSize="16sp" />
         </com.google.android.material.textfield.TextInputLayout>
 
@@ -66,19 +68,24 @@
             android:layout_height="30dp"
             android:layout_gravity="bottom"
             android:layout_marginBottom="10dp"
+            android:background="@null"
+            android:scaleType="fitCenter"
             android:src="@drawable/aichat_icon_speaker"
             android:visibility="visible" />
 
         <androidx.appcompat.widget.AppCompatImageButton
             android:id="@+id/btn_set_mode_send"
             android:layout_width="30dp"
-            tools:visibility="visible"
             android:layout_height="30dp"
             android:layout_gravity="bottom"
             android:layout_marginStart="5dp"
             android:layout_marginBottom="11dp"
+            android:background="@null"
+            android:padding="1dp"
+            android:scaleType="fitCenter"
             android:src="@drawable/aichat_icon_send_message_selector"
-            android:visibility="gone" />
+            android:visibility="gone"
+            tools:visibility="visible" />
 
     </LinearLayout>
 
@@ -88,5 +95,5 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:visibility="gone"
-        tools:visibility="visible"/>
+        tools:visibility="visible" />
 </LinearLayout>
