--- a/Android/common/ui-widget/src/main/res/layout/view_common_title.xml
+++ b/Android/common/ui-widget/src/main/res/layout/view_common_title.xml
@@ -44,9 +44,10 @@
 
     <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/iv_right_icon"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
+        android:layout_width="32dp"
+        android:layout_height="32dp"
         android:layout_marginEnd="15dp"
+        android:padding="4dp"
         android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="@id/iv_back_icon"
         app:layout_constraintEnd_toEndOf="parent"
