--- a/Android/scenes/aichat/src/main/res/layout/aichat_fragment_chat_detail.xml
+++ b/Android/scenes/aichat/src/main/res/layout/aichat_fragment_chat_detail.xml
@@ -53,15 +53,14 @@
                 <androidx.appcompat.widget.AppCompatImageView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:paddingVertical="10dp"
-                    android:src="@drawable/aichat_show_bottom_tips_bg"
-                    android:textSize="12sp" />
+                    android:src="@drawable/aichat_show_popdown_bg" />
 
                 <androidx.appcompat.widget.AppCompatTextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:text="@string/aichat_speaker_tips"
+                    android:layout_marginBottom="3dp"
                     android:textColor="@color/white"
                     android:textSize="12sp" />
             </FrameLayout>
