--- a/Android/scenes/aichat/src/main/res/layout/ease_row_received_message.xml
+++ b/Android/scenes/aichat/src/main/res/layout/ease_row_received_message.xml
@@ -42,6 +42,7 @@
         app:layout_constraintStart_toStartOf="@+id/bubble"
         app:layout_constraintTop_toBottomOf="@+id/timestamp"
         app:layout_goneMarginTop="0dp"
+        tools:visibility="gone"
         android:layout_marginTop="16dp">
 
         <TextView
@@ -54,7 +55,6 @@
             app:layout_constraintTop_toTopOf="parent"
             tools:text="智能体名字" />
     </androidx.constraintlayout.widget.ConstraintLayout>
-
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/bubble"
@@ -69,7 +69,7 @@
         app:layout_constraintStart_toEndOf="@id/iv_userhead"
         app:layout_constraintTop_toBottomOf="@+id/ll_top_bubble"
         app:layout_goneMarginStart="20dp"
-        app:layout_goneMarginTop="0dp">
+        app:layout_goneMarginTop="16dp">
 
         <TextView
             android:id="@+id/tv_chatcontent"
