--- a/Android/scenes/aichat/src/main/res/layout/aichat_fragment_voice_call.xml
+++ b/Android/scenes/aichat/src/main/res/layout/aichat_fragment_voice_call.xml
@@ -47,7 +47,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:button="@drawable/cb_def_selector"
-            android:checked="false" />
+            android:checked="true" />
     </LinearLayout>
 
 
