[Fix][Ai-Chat] bugfixs

--- a/Android/scenes/aichat/src/main/res/values/colors.xml
+++ b/Android/scenes/aichat/src/main/res/values/colors.xml
@@ -3,4 +3,5 @@
     <color name="aichat_dialog_bg_blue">#152164</color>
     <color name="aichat_text_grey_989">#989DBA</color>
     <color name="aichat_text_blue_00">#009DFF</color>
+    <color name="aichat_stoke_092">#092874</color>
 </resources>
