--- a/Android/scenes/aichat/src/main/res/layout/ease_chat_message_list.xml
+++ b/Android/scenes/aichat/src/main/res/layout/ease_chat_message_list.xml
@@ -4,15 +4,15 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <com.scwang.smart.refresh.header.ClassicsHeader
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        <com.scwang.smart.refresh.header.ClassicsHeader
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
 
     <io.agora.scene.aichat.imkit.widget.messageLayout.EaseRecyclerView
         android:id="@+id/message_list"
         android:layout_width="match_parent"
-        android:requiresFadingEdge="vertical"
+        android:layout_height="match_parent"
         android:fadingEdgeLength="40dp"
-        android:layout_height="match_parent" />
+        android:requiresFadingEdge="vertical" />
 
 </com.scwang.smart.refresh.layout.SmartRefreshLayout>
