--- a/Android/scenes/aichat/src/main/res/layout/ease_widget_chat_primary_menu.xml
+++ b/Android/scenes/aichat/src/main/res/layout/ease_widget_chat_primary_menu.xml
@@ -19,6 +19,7 @@
         android:gravity="bottom"
         android:minHeight="50dp"
         android:orientation="horizontal"
+        tools:visibility="gone"
         android:paddingHorizontal="6dp">
 
         <androidx.appcompat.widget.AppCompatImageButton
